# controLED

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
html/: controled.html
html/static/: controLed.css
server/: CMakeLists.txt  makefile
server/include/: animation.h  controller_led.h  device_led.h  device_led_74hc595.h  device_led_ws2812.h  fout.h  json.hpp  labrinth_animation.h  rgba.h  snake_animation.h  webserver.h
server/src/: animation.cpp  controller_led.cpp  device_led.cpp  device_led_74hc595.cpp  device_led_ws2812.cpp  fout.cpp  labrinth_animation.cpp  main.cpp  rgba.cpp  snake_animation.cpp  webserver.cpp
server/systemd/: controled.service
